# rust_auth

./: Cargo.toml
migrations/: 20260118122301_user_table.up.sql  20260119201109_users_update_time.down.sql  20260119201109_users_update_time.up.sql
src/: auth.rs  config.rs  db.rs  dtos.rs  errors.rs  main.rs  models.rs
src/handler/: auth.rs  user.rs
src/utils/: password.rs  token.rs
